# ocaml-example

./: README.md  index.html
.github/: dependabot.yml
.github/workflows/: main.yml
docs/: LINKS.md  README.md  TESTING.md
docs/helloworld/: index.html
src/helloworld/: dune-project  helloworld.opam
src/helloworld/lib/: dune  helloworld.ml
src/helloworld/test/: dune  helloworld.ml
