(lang dune 3.11)

(name helloworld)

(generate_opam_files true)

(source
 (github alex-hedley/ocaml-example))

(authors 
 "Alex Hedley"
 "Rob Anderson")

(maintainers "Nobody yet...")

(license MIT)

(documentation https://alex-hedley.github.io/ocaml-example/)

(package
 (name helloworld)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  (bisect_ppx (and :with-test (>= "2.5.0")))
  (ounit2 :with-test))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
